<resources>

    <string name="app_name">SeaBook</string>
    <string name="Profile">Профиль</string>
    <string name="Regis">Регистрация</string>
    <string name="Name">1. Имя</string>
    <string name="Surname">2. Фамилия</string>
    <string name="Email">Адрес электронной почты</string>
    <string name="Adres">3. Город</string>
    <string name="Phone">4. Номер телефона</string>
    <string name="Password">Пароль(минимум 6 символов)</string>
    <string name="Again_password">Подверждение пароля</string>
    <string name="Create_profile">Создать профиль</string>
    <string name="login">Вход</string>
    <string name="login1">Адрес почты</string>
    <string name="login2">Пароль</string>
    <string name="login3">Регистрация</string>
    <string name="login4">Войти</string>
    <string name="pricefilter">Цена</string>
    <string name="erroe"></string>
    <string name="NamePr">Имя профиля</string>
    <string name="CountPr">Количество сделок:</string>
    <string name="MyDeals">Мои объявления</string>
    <string name="EndDeals">Завершенные объявления</string>
    <string name="Favourite">Избранные объявления</string>
    <string name="favourite">Избранное</string>
    <string name="Settings">Настройки</string>
    <string name="Messages">Сообщения</string>
    <string name="LogOut">Выйти</string>
    <string name="giveName">Введите название книги</string>
    <string name="newdeal">Размещение объявления</string>
    <string name="NameOfBook">Название книги</string>
    <string name="AuthorOfBook">Автор</string>
    <string name="ChanreOfBook">Жанр</string>
    <string name="ScriptOfBook">Описание</string>
    <string name="Exchange">Обмен</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="price">Цена за книгу, руб.(если только обмен-оставить пустым)</string>
    <string name="donedeal">Разместить объявление</string>
    <string name="write">Написать</string>
    <string name="editphone">Изменить номер телефона</string>
    <string name="editmail">Изменить адрес почты</string>
    <string name="editgeo">Изменить город</string>
    <string name="confirm">Подвердить</string>
    <string name="programming">В процессе разработки!</string>
    <string name="save">Сохранить</string>
    <string name="giverewie">Оставить отзыв</string>
    <string name="pleasegiverewie">Оцените продавца!</string>
    <string name="one">1 звезда</string>
    <string name="two">2 звезды</string>
    <string name="three">3 звезды</string>
    <string name="four">4 звезды</string>
    <string name="five">5 звезд</string>
    <string name="filter">Фильтры</string>
    <string name="sbros">Сбросить</string>
    <string name="entermessage">Введите сообщение</string>
    <string name="entergengre">Введите жанр</string>
    <string name="entercity">Введите город</string>
    <string name="ot">От</string>
    <string name="doo">До</string>
    <string name="enterfilter">Применить</string>
    <string name="KNIGA">Книга</string>
    <string name="accceptemail">Email подтвержден</string>
</resources>