<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#92DDED">

    <ImageView
        android:id="@+id/imageView24"
        android:layout_width="218dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/filterfoneup" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView24"
        app:layout_constraintEnd_toEndOf="@+id/imageView24"
        app:layout_constraintStart_toStartOf="@+id/imageView24"
        app:layout_constraintTop_toTopOf="@+id/imageView24" />

    <ImageView
        android:id="@+id/imageView57"
        android:layout_width="72dp"
        android:layout_height="21dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView24"
        app:layout_constraintStart_toEndOf="@+id/imageView24"
        app:layout_constraintTop_toTopOf="@+id/imageView24"
        app:srcCompat="@drawable/sbrosfilter" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="ClearAllFilters"
        android:text="@string/sbros"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView57"
        app:layout_constraintEnd_toEndOf="@+id/imageView57"
        app:layout_constraintStart_toStartOf="@+id/imageView57"
        app:layout_constraintTop_toTopOf="@+id/imageView57" />

    <ImageView
        android:id="@+id/imageView58"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:onClick="ComeBackToSearchView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/krest" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/ChanreOfBook"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView24" />

    <ImageView
        android:id="@+id/imageView74"
        android:layout_width="315dp"
        android:layout_height="34dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView36"
        app:srcCompat="@drawable/editphone" />

    <EditText
        android:id="@+id/enterGengre"
        android:layout_width="316dp"
        android:layout_height="41dp"
        android:ems="10"
        android:hint="@string/entergengre"
        android:inputType="text"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView74"
        app:layout_constraintStart_toStartOf="@+id/imageView74"
        app:layout_constraintTop_toTopOf="@+id/imageView74" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/pricefilter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView74" />

    <ImageView
        android:id="@+id/imageView75"
        android:layout_width="145dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView37"
        app:srcCompat="@drawable/pricefone" />

    <EditText
        android:id="@+id/otPrice"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/ot"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/imageView75"
        app:layout_constraintStart_toStartOf="@+id/imageView75"
        app:layout_constraintTop_toTopOf="@+id/imageView75" />

    <ImageView
        android:id="@+id/imageView77"
        android:layout_width="145dp"
        android:layout_height="35dp"
        android:layout_marginStart="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/otPrice"
        app:layout_constraintStart_toEndOf="@+id/imageView75"
        app:layout_constraintTop_toTopOf="@+id/otPrice"
        app:srcCompat="@drawable/pricefone" />

    <EditText
        android:id="@+id/doPrice"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/doo"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/imageView77"
        app:layout_constraintEnd_toEndOf="@+id/imageView77"
        app:layout_constraintStart_toStartOf="@+id/imageView77"
        app:layout_constraintTop_toTopOf="@+id/imageView77" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/Exchange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView75" />

    <ImageView
        android:id="@+id/Exchangebutton"
        android:layout_width="45dp"
        android:layout_height="39dp"
        android:layout_marginStart="20dp"
        android:onClick="SetExchangeFilterClick"
        app:layout_constraintBottom_toBottomOf="@+id/textView38"
        app:layout_constraintStart_toEndOf="@+id/textView38"
        app:layout_constraintTop_toTopOf="@+id/textView38"
        app:srcCompat="@drawable/no" />

    <ImageView
        android:id="@+id/imageView80"
        android:layout_width="275dp"
        android:layout_height="44dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Exchangebutton"
        app:srcCompat="@drawable/fonelist" />

    <EditText
        android:id="@+id/enterNewBook"
        android:layout_width="274dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/giveName"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/imageView80"
        app:layout_constraintEnd_toEndOf="@+id/imageView80"
        app:layout_constraintStart_toStartOf="@+id/imageView80"
        app:layout_constraintTop_toTopOf="@+id/imageView80" />

    <ImageView
        android:id="@+id/imageView82"
        android:layout_width="186dp"
        android:layout_height="46dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView85"
        app:srcCompat="@drawable/sbrosfilter" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="AcceptFilter"
        android:text="@string/enterfilter"
        app:layout_constraintBottom_toBottomOf="@+id/imageView82"
        app:layout_constraintEnd_toEndOf="@+id/imageView82"
        app:layout_constraintStart_toStartOf="@+id/imageView82"
        app:layout_constraintTop_toTopOf="@+id/imageView82" />

    <ImageView
        android:id="@+id/imageView85"
        android:layout_width="275dp"
        android:layout_height="43dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView80"
        app:srcCompat="@drawable/fonelist" />

    <EditText
        android:id="@+id/enterCityFilter"
        android:layout_width="275dp"
        android:layout_height="44dp"
        android:ems="10"
        android:hint="@string/entercity"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/imageView85"
        app:layout_constraintStart_toStartOf="@+id/imageView85"
        app:layout_constraintTop_toTopOf="@+id/imageView85" />

</androidx.constraintlayout.widget.ConstraintLayout>