<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#92DDED">

    <ImageView
        android:id="@+id/imageView45"
        android:layout_width="304dp"
        android:layout_height="47dp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/newdeal" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newdeal"
        app:layout_constraintBottom_toBottomOf="@+id/imageView45"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView45" />

    <ImageView
        android:id="@+id/firstpic"
        android:layout_width="109dp"
        android:layout_height="108dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="48dp"
        android:onClick="DownLoadFirstImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView45"
        app:srcCompat="@drawable/setimage1" />

    <ImageView
        android:id="@+id/secpic"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="40dp"
        android:onClick="DownLoadSecondImage"
        app:layout_constraintStart_toStartOf="@+id/firstpic"
        app:layout_constraintTop_toBottomOf="@+id/imageView45"
        app:srcCompat="@drawable/setimage2" />

    <ImageView
        android:id="@+id/thirdpic"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="132dp"
        android:onClick="DownLoadThirdImage"
        app:layout_constraintStart_toStartOf="@+id/firstpic"
        app:layout_constraintTop_toBottomOf="@+id/secpic"
        app:srcCompat="@drawable/setimage2" />

    <ImageView
        android:id="@+id/imageView51"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thirdpic"
        app:srcCompat="@drawable/newdealinputphone" />

    <EditText
        android:id="@+id/namebook"
        android:layout_width="340dp"
        android:layout_height="46dp"
        android:layout_marginStart="40dp"
        android:ems="10"
        android:hint="@string/NameOfBook"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/imageView51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView51"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView52"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView51"
        app:srcCompat="@drawable/newdealinputphone" />

    <EditText
        android:id="@+id/authorbook"
        android:layout_width="340dp"
        android:layout_height="46dp"
        android:layout_marginStart="40dp"
        android:ems="10"
        android:hint="@string/AuthorOfBook"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/imageView52"
        app:layout_constraintStart_toStartOf="@+id/imageView52"
        app:layout_constraintTop_toTopOf="@+id/imageView52" />

    <ImageView
        android:id="@+id/imageView53"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authorbook"
        app:srcCompat="@drawable/newdealinputphone" />

    <EditText
        android:id="@+id/chanrebook"
        android:layout_width="340dp"
        android:layout_height="46dp"
        android:layout_marginStart="40dp"
        android:ems="10"
        android:hint="@string/ChanreOfBook"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/imageView53"
        app:layout_constraintStart_toStartOf="@+id/imageView53"
        app:layout_constraintTop_toTopOf="@+id/imageView53" />

    <ImageView
        android:id="@+id/imageView54"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView53"
        app:srcCompat="@drawable/newdealinputphone" />

    <EditText
        android:id="@+id/scriptbook"
        android:layout_width="340dp"
        android:layout_height="46dp"
        android:layout_marginStart="40dp"
        android:ems="10"
        android:hint="@string/ScriptOfBook"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/imageView54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView54"
        app:layout_constraintVertical_bias="0.105" />

    <ImageView
        android:id="@+id/imageView55"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView54"
        app:srcCompat="@drawable/newdealinputphone" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/Exchange"
        app:layout_constraintBottom_toBottomOf="@+id/imageView55"
        app:layout_constraintStart_toStartOf="@+id/imageView55"
        app:layout_constraintTop_toTopOf="@+id/imageView55" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/yes"
        app:layout_constraintBottom_toBottomOf="@+id/imageView55"
        app:layout_constraintStart_toEndOf="@+id/textView27"
        app:layout_constraintTop_toTopOf="@+id/imageView55"
        app:layout_constraintVertical_bias="0.481" />

    <ImageView
        android:id="@+id/yesexbutton"
        android:layout_width="31dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:onClick="SetTrueEx"
        app:layout_constraintBottom_toBottomOf="@+id/imageView55"
        app:layout_constraintStart_toEndOf="@+id/textView28"
        app:layout_constraintTop_toTopOf="@+id/imageView55"
        app:layout_constraintVertical_bias="0.866"
        app:srcCompat="@drawable/no" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/no"
        app:layout_constraintBottom_toBottomOf="@+id/imageView55"
        app:layout_constraintStart_toEndOf="@+id/yesexbutton"
        app:layout_constraintTop_toTopOf="@+id/imageView55" />

    <ImageView
        android:id="@+id/noexbutton"
        android:layout_width="31dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:onClick="SetFalseEx"
        app:layout_constraintBottom_toBottomOf="@+id/imageView55"
        app:layout_constraintStart_toEndOf="@+id/textView29"
        app:layout_constraintTop_toTopOf="@+id/imageView55"
        app:srcCompat="@drawable/no" />

    <ImageView
        android:id="@+id/imageView59"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView55"
        app:srcCompat="@drawable/newdealinputphone" />

    <EditText
        android:id="@+id/priceofbook"
        android:layout_width="340dp"
        android:layout_height="46dp"
        android:layout_marginStart="40dp"
        android:ems="10"
        android:hint="@string/price"
        android:inputType="text"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView59"
        app:layout_constraintStart_toStartOf="@+id/imageView59"
        app:layout_constraintTop_toTopOf="@+id/imageView59" />

    <ImageView
        android:id="@+id/imageView60"
        android:layout_width="362dp"
        android:layout_height="46dp"
        android:onClick="CompleteCreateDeal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/donedeal" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donedeal"
        app:layout_constraintBottom_toBottomOf="@+id/imageView60"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView60" />

</androidx.constraintlayout.widget.ConstraintLayout>